--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,22 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+  .animate-gradient {
+    animation: gradient 3s linear infinite;
+    background-size: 200% 100%;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 100% 50%;
+  }
+  50% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
 }
 
 @layer base {
